--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -1,4 +1,5 @@
-<% semantic_navigation :devise_nav, html: { class: 'nav nav-pills pjax-nav' } do |n| %>
+<br />
+<% semantic_navigation :devise_nav, html: { class: 'nav nav-tabs pjax-nav' } do |n| %>
   <%= n.item "Sign in", link: new_session_path(resource_name) %>
   <%= n.item "Sign up", link: new_registration_path(resource_name) %>
   <%= n.item "Forgot your password?", link: new_password_path(resource_name) %>
