--- a/app/views/users/shared/_links.erb
+++ b/app/views/users/shared/_links.erb
@@ -1,5 +1,5 @@
 <br />
-<% semantic_navigation :devise_nav, html: { class: 'nav nav-tabs pjax-nav' } do |n| %>
+<% semantic_navigation :devise_nav, html: { class: 'nav nav-tabs' } do |n| %>
   <%= n.item "Sign in", link: new_session_path(resource_name) %>
   <%= n.item "Sign up", link: new_registration_path(resource_name) %>
   <%= n.item "Forgot your password?", link: new_password_path(resource_name) %>
