--- a/app/assets/stylesheets/bootstrap-custom.css.scss
+++ b/app/assets/stylesheets/bootstrap-custom.css.scss
@@ -1,15 +1,15 @@
 //
 // Remove icons since we use font-awesome
 //
-//
-// Bootstrap v2.3.0
-//
-// Copyright 2012 Twitter, Inc
-// Licensed under the Apache License v2.0
-// http://www.apache.org/licenses/LICENSE-2.0
-//
-// Designed and built with all the love in the world @twitter by @mdo and @fat.
-// Converted to Sass by @thomasmcdonald_, and distributed as bootstrap-sass
+/*!
+ * Bootstrap v2.3.0
+ *
+ * Copyright 2012 Twitter, Inc
+ * Licensed under the Apache License v2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Designed and built with all the love in the world @twitter by @mdo and @fat.
+ */
 
 // Core variables and mixins
 @import "bootstrap/variables"; // Modify this for custom colors, font-sizes, etc
@@ -30,6 +30,7 @@
 @import "bootstrap/tables";
 
 // Components: common
+//@import "bootstrap/sprites";
 @import "bootstrap/dropdowns";
 @import "bootstrap/wells";
 @import "bootstrap/component-animations";
@@ -38,7 +39,7 @@
 // Components: Buttons & Alerts
 @import "bootstrap/buttons";
 @import "bootstrap/button-groups";
-@import "bootstrap/alerts"; // Note: alerts share common CSS with buttons and thus have styles in _buttons.scss
+@import "bootstrap/alerts"; // Note: alerts share common CSS with buttons and thus have styles in buttons
 
 // Components: Nav
 @import "bootstrap/navs";
@@ -54,6 +55,7 @@
 
 // Components: Misc
 @import "bootstrap/thumbnails";
+@import "bootstrap/media";
 @import "bootstrap/labels-badges";
 @import "bootstrap/progress-bars";
 @import "bootstrap/accordion";
