--- a/app/views/shared/navigation/_users.html.erb
+++ b/app/views/shared/navigation/_users.html.erb
@@ -1,27 +1,27 @@
 <% semantic_navigation :application_nav, html: { class: 'nav navbar-nav' } do |n| %>
   <%= n.item '', link: domains_path do %>
-    <i class="icon-white icon-th-list"></i> My Domains
+    <i class="glyphicon glyphicon-th-list"></i> My Domains
   <% end %>
   <%= n.item '', link: hosts_path do %>
-    <i class="icon-white icon-th"></i> Dynamic Hosts
+    <i class="glyphicon glyphicon-th"></i> Dynamic Hosts
   <% end %>
   <%= n.item '', link: page_path('help') do %>
-    <i class="icon-white icon-question-sign"></i> Help & Support
+    <i class="glyphicon glyphicon-question-sign"></i> Help & Support
   <% end %>
 <% end %>
 
 <% semantic_navigation :user_nav, html: { class: 'nav navbar-nav navbar-right' } do |n| %>
   <%= n.item '', link: Settings.news_link, 
     html: { rel: 'tooltip', data: { placement: 'bottom' }, title: Settings.news_link } do %>
-    <i class="icon-white icon-share-alt"></i> News
+    <i class="glyphicon glyphicon-share-alt"></i> News
   <% end %>
   <%= n.item '', link: page_path('donate'),
     html: { rel: 'tooltip', title: 'PayPal', data: { placement: 'bottom' }, class: 'highlight' } do %>
-    <i class="icon-white icon-heart"></i> Donate
+    <i class="glyphicon glyphicon-heart"></i> Donate
   <% end %>
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-        <i class="icon-white icon-user"></i> <%= current_user.email %> <b class="caret"></b>
+        <i class="glyphicon glyphicon-user"></i> <%= current_user.email %> <b class="caret"></b>
       </a>
       <%= n.group do %>
         <%= n.item '', link: edit_user_registration_path, html: { rel: 'tooltip', title: "IP: #{client_remote_ip}" } do %>
