--- a/app/views/public/pages/home.html.erb
+++ b/app/views/public/pages/home.html.erb
@@ -12,32 +12,15 @@
   <div class="container">
     <div class="row">
 
-      <div class="col-lg-4">
-        <div class="contour">
-          <h3 class="text-center animated tada">Use it yourself, it's free!</h3>
-          <p class="text-center">In a few seconds you're done!</p>
-          <br>
-          <%= simple_form_for(resource, 
-              as: resource_name, 
-              url: registration_path(resource_name),
-              wrapper: :inlabel
-            ) do |f| %>
-            <%= devise_error_messages! %>
-            <%= honeypot %>
-            <%= f.input :full_name, required: true %>
-            <%= f.input :email, required: true %>
-            <%= f.input :password, required: true %>
-            <br>
-            <%= f.submit "Sign up", class: 'btn btn-primary' %>
-            <small>
-              or <%= link_to 'Sign in', new_user_session_path %>
-              / <%= link_to 'Forgot your password?', new_password_path(resource_name) %>
-            </small>
-          <% end %>
-        </div>
+      <div class="col-lg-4 home-sign-up">
+        <h3>Use it yourself, it's free!</h3>
+        <p>In a few seconds you're done!</p>
+        <br>
+        <%= render 'users/registrations/new', wrapper: :inlabel, 
+          resource_name: :user, resource: User.new %>
         <br class="hidden-lg">
       </div>
-      <div class="col-lg-8">
+      <div class="col-lg-7 col-lg-offset-1">
         <%= render 'public/pages/home/slides' %>
       </div>
 
