--- a/app/views/public/pages/team.html.erb
+++ b/app/views/public/pages/team.html.erb
@@ -4,9 +4,55 @@
 
 <div class="row">
   <div class="col-lg-6">
-    <%= render :partial => 'public/pages/team/zooz' %>
+    <div class="clearfix">
+      <%= image_tag 'marketing/zooz.jpg', class: 'pull-left img-rounded', 
+          style: 'height: 80px; margin-right: 1em;' %>
+      <h4>Vaidas Jablonskis <small>System Administrator</small></h4>
+      <ul class="list-unstyled">
+        <li>
+          <a href="https://twitter.com/vaijab" class="twitter-follow-button">Follow @vaijab</a>
+          <script src="//platform.twitter.com/widgets.js" type="text/javascript"></script>
+        </li>
+        <li>
+          <a href="http://jablonskis.org/">http://jablonskis.org/</a>
+        </li>
+      </ul>
+    </div>
+    <p>
+      He began his career as a Linux systems user and quickly became involved with 
+      open source technologies.
+    </p>
+    <p>
+      Vaidas currently works as a Linux Systems Administrator 
+      for a London based company. He is greatly involved in Linux and free software 
+      community and is always interested in giving something back.
+    </p>
   </div>
   <div class="col-lg-6">
-    <%= render :partial => 'public/pages/team/clyfe' %>
+    <div class="clearfix">
+      <%= image_tag 'marketing/clyfe.jpg', class: 'pull-left img-rounded', 
+          style: 'height: 80px; margin-right: 1em;' %>
+      <h4>Claudius Nicolae <small>Software Developer</small></h4>
+      <ul class="list-unstyled">
+        <li>
+          <a href="https://twitter.com/_clyfe" class="twitter-follow-button">Follow @_clyfe</a>
+          <script src="//platform.twitter.com/widgets.js" type="text/javascript"></script>
+        </li>
+        <li>
+          <a href="https://github.com/clyfe">https://github.com/clyfe</a>
+        </li>
+      </ul>
+    </div>
+    <p>
+      He has a 
+      <em>Msc in Software Engineering</em> and a
+      <em>Bsc in Mathematics and Computer Science</em> from the
+      <em>University of Bucharest</em>.
+    </p>
+    <p>
+      He worked with many programming languages and technologies from web applications to
+      kernel-mode code on both Linux and Windows platforms, and generally, he favors using
+      open source software.
+    </p>
   </div>
 </div>
