circles look nicer

--- a/app/views/public/pages/team.html.erb
+++ b/app/views/public/pages/team.html.erb
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="col-lg-6">
     <div class="clearfix">
-      <%= image_tag 'marketing/zooz.jpg', class: 'pull-left img-rounded', 
+      <%= image_tag 'marketing/zooz.jpg', class: 'pull-left img-circle', 
           style: 'height: 80px; margin-right: 1em;' %>
       <h4>Vaidas Jablonskis <small>System Administrator</small></h4>
       <ul class="list-unstyled">
@@ -30,7 +30,7 @@
   </div>
   <div class="col-lg-6">
     <div class="clearfix">
-      <%= image_tag 'marketing/clyfe.jpg', class: 'pull-left img-rounded', 
+      <%= image_tag 'marketing/clyfe.jpg', class: 'pull-left img-circle', 
           style: 'height: 80px; margin-right: 1em;' %>
       <h4>Claudius Nicolae <small>Software Developer</small></h4>
       <ul class="list-unstyled">
