fix row action being removed (sync) ref https://github.com/activescaffold/active_scaffold/commit/0c6aad494133705e3fbff3ac14297b9b3b5fd919

--- a/app/views/users/as/_list_record.html.erb
+++ b/app/views/users/as/_list_record.html.erb
@@ -1,16 +1,31 @@
 <%# add :controller_id => :as_records to respond in records list, not a's %>
 
 <%
-record = list_record if list_record # compat with render :partial :collection
+record = list_record if local_assigns[:list_record] # compat with render :partial :collection
 columns ||= list_columns
-tr_class = cycle("", "even-record")
-tr_class += " #{list_row_class(record)}"
-url_options = params_for(:action => :list, :id => record.id)
+tr_class = cycle("", "even-record") + ' ' + list_row_class(record)
 action_links ||= active_scaffold_config.action_links.member
+data_refresh ||= record.id
 -%>
+<tr class="record <%= tr_class %>" id="<%= element_row_id(:controller_id => :as_records, :action => :list, :id => record.id) %>" data-refresh="<%= data_refresh %>">
+  <% columns.each do |column| %>
+    <% authorized = record.authorized_for?(:crud_type => :read, :column => column.name) -%>
+    <% column_value = authorized ? get_column_value(record, column) : active_scaffold_config.list.empty_field_text -%>
 
-<tr class="record <%= tr_class %>" id="<%= element_row_id(:controller_id => :as_records, :action => :list, :id => record.id) %>" data-refresh="<%= url_for(params_for(:action => :row, :id => record.id, :_method => :get)).html_safe %>">
-  <%= render :partial => 'list_record_columns', :locals => {:record => record, :columns => columns} %>
-  <%= render :partial => 'list_actions', :locals => {:record => record, :url_options => url_options, :action_links => action_links} unless action_links.empty? %>
-  <%= render_nested_view(action_links, url_options, record) unless @nested_auto_open.nil? %>
+    <%= content_tag :td, column_attributes(column, record).merge(:class => column_class(column, column_value, record)) do %>
+      <%= authorized ? render_list_column(column_value, column, record) : column_value %>
+    <% end %>
+  <% end -%>
+    
+  <td class="actions"><table>
+    <tr>
+      <td class="indicator-container">
+        <%= loading_indicator_tag(:action => :record, :id => record.id) %>
+      </td>
+      <%= display_action_links(action_links, record, :level_0_tag => :td, :for => record.persisted? ? record : record.class) %>
+    </tr>
+  </table></td>
+
+  
+  <%= render_nested_view(action_links, record) unless @nested_auto_open.nil? %>
 </tr>
