--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,9 @@
-<%= render :partial => "users/shared/links" %>
+<%= render 'users/shared/links' %>
 
-<%= render 'users/registrations/new' %>
-
+<div class="row">
+  <div class="col-lg-offset-4 col-lg-4 well">
+    
+    <%= render 'users/registrations/new' %>
+    
+  </div>
+</div>
