--- a/app/views/users/registrations/_new.html.erb
+++ b/app/views/users/registrations/_new.html.erb
@@ -6,6 +6,16 @@
   options[:wrapper] = wrapper if defined? wrapper
 %>
 
+<p>
+  <%= link_to user_omniauth_authorize_path(:google_apps),
+    class: 'btn btn-block btn-social btn-google-plus',
+    'data-no-turbolink' => true do %>
+    <i class="fa fa-google-plus"></i> Sign up with Google
+  <% end %>
+</p>
+
+<h5 class="text-info text-center text-separator">Or use the form below</h5>
+
 <%= simple_form_for(resource, options) do |f| %>
   
   <%= devise_error_messages! %>
@@ -18,7 +28,7 @@
     <%= f.submit "Sign up", class: 'btn btn-primary' %>
     <small>
       or <%= link_to 'Sign in', new_user_session_path %>
-      / <%= link_to 'Forgot your password?', new_password_path(resource_name) %>
+      / <%= link_to 'Forgot password', new_password_path(resource_name) %>
     </small>
   </div>
 <% end %>
