--- a/app/views/users/shared/_links.erb
+++ b/app/views/users/shared/_links.erb
@@ -1,10 +1,10 @@
 <br />
-<% semantic_navigation :devise_nav, html: { class: 'nav nav-tabs' } do |n| %>
+<% semantic_navigation :devise_nav, html: { class: 'nav nav-tabs nav-justified' } do |n| %>
   <%= n.item "Sign in", link: new_session_path(resource_name) %>
   <%= n.item "Sign up", link: new_registration_path(resource_name) %>
-  <%= n.item "Forgot your password?", link: new_password_path(resource_name),
+  <%= n.item "Forgot password", link: new_password_path(resource_name),
     highlights_on: [{ controller: 'devise/passwords' }] %>
-  <%= n.item "Didn't receive confirmation instructions?", link: new_confirmation_path(resource_name) %>
-  <%= n.item "Didn't receive unlock instructions?", link: new_unlock_path(resource_name) %>
+  <%= n.item "Resend confirmation instructions", link: new_confirmation_path(resource_name) %>
+  <%= n.item "Resend unlock instructions", link: new_unlock_path(resource_name) %>
 <% end %>
 </br>
