nicer contact form

--- a/app/views/public/pages/contact.html.erb
+++ b/app/views/public/pages/contact.html.erb
@@ -6,6 +6,8 @@
   </small>
 </div>
 
-
-<%= render :partial => 'public/pages/contact/form' %>
-
+<div class="row">
+  <div class="col-lg-offset-2 col-lg-8">
+    <%= render :partial => 'public/pages/contact/form' %>
+  </div>
+</div>
