change from google_apps to google_oauth2

--- a/app/views/users/registrations/_new.html.erb
+++ b/app/views/users/registrations/_new.html.erb
@@ -7,7 +7,7 @@
 %>
 
 <p>
-  <%= link_to user_omniauth_authorize_path(:google_apps),
+  <%= link_to user_omniauth_authorize_path(:google_oauth2),
     class: 'btn btn-block btn-social btn-google-plus',
     'data-no-turbolink' => true do %>
     <i class="fa fa-google-plus"></i> Sign up with Google
