--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,7 @@
 $label_color: #555; // hack for as labels ...
 $carousel-indicator-border-color: #333;
 $carousel-indicator-active-bg: #333;
+$grid-float-breakpoint: 992px;
 
 @import "bootstrap";
 @import "bootstrap/theme";
