--- a/app/views/shared/navigation/_public.html.erb
+++ b/app/views/shared/navigation/_public.html.erb
@@ -13,7 +13,7 @@
   <% end %>
 <% end %>
 
-<% semantic_navigation :session_nav, html: { class: 'nav navbar-nav pull-right' } do |n| %>
+<% semantic_navigation :session_nav, html: { class: 'nav navbar-nav navbar-right' } do |n| %>
   <%= n.item '', link: Settings.news_link, 
     html: { rel: 'tooltip', data: { placement: 'bottom' }, title: Settings.news_link } do %>
     <i class="glyphicon glyphicon-share-alt"></i> News
