--- a/app/assets/stylesheets/theme/navbar.css.scss
+++ b/app/assets/stylesheets/theme/navbar.css.scss
@@ -9,3 +9,16 @@
         color: yellow;
     }
 }
+
+.navbar-vertical {
+    .navbar-collapse {
+        padding: 0;
+    }
+    .nav-stacked.navbar-nav {
+        float: none;
+        margin: 0;
+        > li {
+            float: none;
+        }
+    }
+}
