--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,9 +1,16 @@
-<%= render 'users/shared/links' %>
+<br>
 
 <div class="row">
-  <div class="col-lg-offset-4 col-lg-4 well">
+  <div class="col-md-3">
     
-    <%= render 'users/registrations/new' %>
+    <%= render 'users/shared/links' %>
+    
+  </div>
+  <div class="col-md-offset-2 col-md-4">
+    
+    <div class="well">
+      <%= render 'users/registrations/new' %>
+    </div>
     
   </div>
 </div>
