fix tokens for devise 3.2.2 http://blog.plataformatec.com.br/2013/08/devise-3-1-now-with-more-secure-defaults/

--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -4,10 +4,10 @@
 
 <p>
   <%= link_to 'Confirm my account', 
-    confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %>
+    confirmation_url(@resource, :confirmation_token => @token) %>
 </p>
 
 <p>
   If you cannot see the link copy and paste the following address in your browser address bar:<br />
-  <%= confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %>
+  <%= confirmation_url(@resource, :confirmation_token => @token) %>
 </p>
