--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -4,12 +4,12 @@
 
 <p>
   <%= link_to 'Change my password', 
-    edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %>
+    edit_password_url(@resource, :reset_password_token => @token) %>
 </p>
 
 <p>
   If you cannot see the link copy and paste the following address in your browser address bar:<br />
-  <%= edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %>
+  <%= edit_password_url(@resource, :reset_password_token => @token) %>
 </p>
 
 
