rm nprogress and animate

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -14,7 +14,7 @@
   </head>
   <body class="users">
 
-    <div class="container animated fast fadeInDown" id="main">
+    <div class="container" id="main">
       <%= flash_display 'flash' %>
       <%= yield %>
     </div>
