--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -5,7 +5,7 @@
     <div id="wrap">
       
       <%= render 'shared/navigation' %>
-      <div class="container animated fast fadeInDown" id="main">
+      <div class="container" id="main">
         <%= flash_display 'flash' %>
         <%= yield %>
       </div>
