--- a/app/views/rails_admin/main/ban.html.erb
+++ b/app/views/rails_admin/main/ban.html.erb
@@ -13,10 +13,10 @@
   <input name="return_to" type="<%= :hidden %>" value="<%= (params[:return_to].presence || request.referer) %>"></input>
   <div class="form-actions">
     <button class="btn btn-danger" data-disable-with="<%= t("admin.form.confirmation") %>" type="submit">
-      <i class="icon-white icon-ok"></i> <%= t("admin.form.confirmation") %>
+      <i class="glyphicon-white icon-ok"></i> <%= t("admin.form.confirmation") %>
     </button>
     <button class="btn" data-disable-with="<%= t("admin.form.cancel") %>" name="_continue" type="submit">
-      <i class="icon-remove"></i> <%= t("admin.form.cancel") %>
+      <i class="glyphicon-remove"></i> <%= t("admin.form.cancel") %>
     </button>
   </div>
 <% end %>
