--- a/app/views/shared/navigation/_users.html.erb
+++ b/app/views/shared/navigation/_users.html.erb
@@ -25,10 +25,10 @@
       </a>
       <%= n.group do %>
         <%= n.item '', link: edit_user_registration_path, html: { rel: 'tooltip', title: "IP: #{client_remote_ip}" } do %>
-          <i class="icon-cog"></i> Settings
+          <i class="glyphicon-cog"></i> Settings
         <% end %>
         <%= n.item '', link: destroy_user_session_path do %>
-          <i class="icon-off"></i> Sign out
+          <i class="glyphicon-off"></i> Sign out
         <% end %>
       <% end %>
     </li>
